# hanfani

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
.husky/: pre-commit  pre-push
apps/api/: .env.example  README.md  db.py  main.py  models.py  package.json  pyproject.toml  requirements.txt  run-worker.sh  worker.py
apps/api/services/: __init__.py  agent.py  topic_mentions.py  trends.py  trends_scraper.py  trends_store.py
apps/api/tests/: __init__.py  conftest.py  test_agent.py  test_main.py  test_topic_mentions.py  test_trends.py  test_trends_scraper.py  test_trends_store.py
apps/web/: .env.example  Dockerfile.test  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  vitest-env.d.ts  vitest.config.ts  vitest.setup.ts
apps/web/e2e/: home.spec.ts
apps/web/src/actions/: agent.ts  status.ts  trends.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/__tests__/: page.test.tsx
apps/web/src/app/agent/: layout.tsx  page.tsx
apps/web/src/app/docs/: page.tsx
apps/web/src/app/status/: layout.tsx  page.tsx
apps/web/src/app/trends/: layout.tsx  page.tsx
apps/web/src/components/: Footer.tsx  Header.tsx  MostRelevantBadge.tsx  Pagination.tsx  SearchableCountrySelect.tsx  ThemeToggle.tsx  ViewModeToggle.tsx
apps/web/src/components/__tests__/: SearchableCountrySelect.test.tsx  ViewModeToggle.test.tsx
apps/web/src/dal/: agent.ts  status.ts  trends.ts
apps/web/src/http/: client.ts
apps/web/src/server/: index.ts
(+11 files in other folders)
